algumas trocas css

--- a/about.html
+++ b/about.html
@@ -7,17 +7,58 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Intel+One+Mono:ital,wght@0,300..700;1,300..700&family=M+PLUS+Rounded+1c&family=Oleo+Script:wght@400;700&family=Special+Gothic+Expanded+One&family=Viga&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Services Vini</title>
+    <title> Vini</title>
 </head>
 <body>
 
     <header>
-        <a href="index.html" class="a-header">Home</a>
-        <a href="about.html" class="a-header">About</a>
-        <a href="contact.html" class="a-header">Contact</a>
+        <a href="index.html" class="a-header">Início</a>
+        <a href="about.html" class="a-header">Sobre</a>
+        <a href="contact.html" class="a-header">Contato</a>
     </header>
+
+    <div class="section-about">
+
+      <div class="div-img">
+            <img src="img/mevini.webp" class="img-about" alt="image of me">
+        </div>
+
+         <div class="div-about">
+             <h2 class="h2-about">Me chamo <Strong class="strong-name">Vinicius Silva</Strong>, mas pode me chamar de Vini. Tenho <strong class="strong-name">14</strong> anos, estudo programação há 1 ano e sempre busco evoluir um pouco a cada dia.
+                Além do código, gosto de jogar Valorant, jogar futebol com os amigos e também faço treinos de corrida porque evoluir o corpo e a mente faz parte.
+                 Me interessei por front-end porque gosto de ver as coisas funcionando na tela. Já aprendi <strong class="strong-name">HTML, CSS, JavaScript</strong>, manipulação do DOM, responsividade 
+                 e consumo de APIs. Faço cursos na Alura.
+                Gosto de transformar o que aprendo em projetos reais e estou sempre buscando aprender mais.
+                 Eu sei que ainda estou no começo, mas cada linha de código que escrevo me deixa mais perto do desenvolvedor que quero ser.
+                </h2>
+        </div>
+
+    </div>
+    <div class="div-bigText">
+      <p class="bigText">Estou atualmente em busca da minha primeira oportunidade como Jovem Aprendiz, com foco na área de Front-End, mas também estou aberto a aprender sobre outras áreas da tecnologia.
+          Venho estudando por conta própria e em plataformas como a Alura, sempre buscando entender na prática como funcionam os fundamentos da programação e do design responsivo.
+          Além das linguagens de marcação e estilo, venho me aprofundando em conceitos de boas práticas, organização de código e usabilidade. Gosto de desafios que me tirem da zona de conforto e me obriguem a aprender
+           algo novo. Tenho facilidade em trabalhar em equipe, me comunico bem e sou comprometido com prazos e entregas.
+            Fora do computador, também sou uma pessoa ativa: pratico esportes como futebol e corrida, o que me ajuda a desenvolver foco, disciplina e trabalho em equipe  habilidades que considero essenciais também no mundo da programação.
+            Estou preparado para começar com humildade, vontade de aprender e disposição para crescer dentro de uma empresa que acredite no potencial de jovens iniciantes. Meu maior objetivo é 
+              construir uma base sólida como desenvolvedor e, no futuro, atuar profissionalmente na área de tecnologia, contribuindo com soluções criativas e funcionais.</p>
+    </div>
     
-    
+   
+    <footer>
+  <div class="footer-div">
+    <p>© 2025 Vinicius Silva · Todos os direitos reservados</p>
+    <div class="footer-ancoras">
+      <a href="https://github.com/dev-viniSilva" class="ancora-footer">Projetos</a>
+    </div>
+    <div class="footer-social">
+      <a href="https://github.com/dev-viniSilva" target="_blank" class="ancora-footer">GitHub</a>
+      <a href="https://www.linkedin.com/in/vinicius-silva-165686356/" target="_blank" class="ancora-footer">LinkedIn</a>
+      <p class="ancora-footer">vinrun123@gmail.com</p>
+    </div>
+  </div>
+</footer>
+
     <script src="index.js"></script>
 </body>
 </html>
