--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,47 @@
 <body>
 
     <header>
-        <a href="index.html" class="a-header">Home</a>
-        <a href="about.html" class="a-header">About</a>
-        <a href="contact.html" class="a-header">Contact</a>
+        <a href="index.html" class="a-header">Início</a>
+        <a href="about.html" class="a-header">Sobre</a>
+        <a href="contact.html" class="a-header">Contato</a>
     </header>
     
-    
+    <div class="div-contact">
+      <a href="https://github.com/dev-viniSilva" class="ancora-contact"><img src="img/github-icon-1-logo-black-and-white.png" class="img-contact" alt=""></a>
+
+    </div>
+
+
+
+<div class="contact-box">
+  <h2 class="contact-h2">Entre em Contato</h2>
+  <p class="contact-p">
+    Se você chegou até aqui, é porque algo chamou sua atenção e isso já me deixa feliz!<br><br>
+    Estou sempre aberto a novas ideias, projetos criativos e conexões que tragam aprendizado e crescimento.<br><br>
+    Seja para falar sobre uma vaga de <strong class="contact-strong">Jovem Aprendiz</strong>, uma oportunidade na área de <strong class="contact-strong">Desenvolvimento Front-End</strong>, ou até mesmo para tirar dúvidas ou bater um papo sobre tecnologia, design ou carreira pode contar comigo!<br><br>
+    Gosto de estar em constante evolução, aprender com outras pessoas e colaborar em projetos que façam a diferença.<br><br>
+    Sinta-se à vontade para me enviar uma mensagem pelo formulário abaixo, pelo e-mail ou pelas minhas redes sociais.<br><br>
+     <strong class="contact-strong">E-mail:</strong> seuemail@email.com<br>
+     <strong class="contact-strong">Localização:</strong> New jersey EUA<br>
+    Vamos conversar?
+  </p>
+</div>
+
+     <footer>
+  <div class="footer-div">
+    <p>© 2025 Vinicius Silva · Todos os direitos reservados</p>
+    <div class="footer-ancoras">
+      <a href="https://github.com/dev-viniSilva" class="ancora-footer">Projetos</a>
+      <a href=""><img src="img/insta" alt=""></a>
+    </div>
+    <div class="footer-social">
+      <a href="https://github.com/dev-viniSilva" target="_blank" class="ancora-footer">GitHub</a>
+      <a href="https://www.linkedin.com/in/vinicius-silva-165686356/" target="_blank" class="ancora-footer">LinkedIn</a>
+      <p class="ancora-footer">vinrun123@gmail.com</p>
+    </div>
+  </div>
+</footer>
+
     <script src="index.js"></script>
 </body>
 </html>
