--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     Seja para falar sobre uma vaga de <strong class="contact-strong">Jovem Aprendiz</strong>, uma oportunidade na área de <strong class="contact-strong">Desenvolvimento Front-End</strong>, ou até mesmo para tirar dúvidas ou bater um papo sobre tecnologia, design ou carreira pode contar comigo!<br><br>
     Gosto de estar em constante evolução, aprender com outras pessoas e colaborar em projetos que façam a diferença.<br><br>
     Sinta-se à vontade para me enviar uma mensagem pelo formulário abaixo, pelo e-mail ou pelas minhas redes sociais.<br><br>
-     <strong class="contact-strong">E-mail:</strong> seuemail@email.com<br>
+     <strong class="contact-strong">E-mail:</strong> vinrun123@gmail.com<br>
      <strong class="contact-strong">Localização:</strong> New jersey EUA<br>
     Vamos conversar?
   </p>
